@@ -1,2 +1,2 @@
 @echo off
-java -cp media-driver.jar io.aeron.samples.AeronStat
+java --add-opens java.base/jdk.internal.misc=ALL-UNNAMED --add-opens java.base/java.util.zip=ALL-UNNAMED -cp media-driver.jar io.aeron.samples.AeronStat
