@@ -1,3 +1,3 @@
 @echo off
-java -cp media-driver.jar io.aeron.samples.ErrorStat
+java --add-opens java.base/jdk.internal.misc=ALL-UNNAMED --add-opens java.base/java.util.zip=ALL-UNNAMED -cp media-driver.jar io.aeron.samples.ErrorStat
 pause
