@@ -1,5 +1,5 @@
 @echo off
 echo Media Driver Started...
-java -cp media-driver.jar io.aeron.driver.MediaDriver
+java --add-opens java.base/jdk.internal.misc=ALL-UNNAMED --add-opens java.base/java.util.zip=ALL-UNNAMED -cp media-driver.jar io.aeron.driver.MediaDriver
 echo Media Driver Stopped.
 pause
